--- a/components/heroSection/heroSection.module.scss
+++ b/components/heroSection/heroSection.module.scss
@@ -1,5 +1,5 @@
 .heroSection{
-    background-image: url('/images/background/hero-bg.jpg');
+    // background-image: url('/images/background/hero-bg.jpg');
     background-size: cover;
     background-position: center;
     height: calc(100vh - 165px);
