--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -131,3 +131,22 @@ body {
   }
 }
 
+.testimonialSwiper {
+  position: relative;
+  .swiper-slide-next::after {
+    content: "";
+    display: block;
+    height: 100%;
+    width: 100%;
+    position: absolute;
+    right: 0;
+    bottom: 0;
+    background: rgb(255 255 255) !important;
+    background: linear-gradient(
+      270deg,
+      rgb(255 255 255) 40%,
+      rgb(255 255 255 / 13%) 99%
+    ) !important;
+    z-index: 9;
+  }
+}
