--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -176,3 +176,11 @@ body {
 .dark .testimonialSwiper .swiper-slide-next::after {
   background: linear-gradient(270deg, rgb(2 6 23) 40%, rgb(2 6 23 / 10%) 99%) !important;
 }
+
+.menu-sec-container{
+  background-image: url("../public/images/background/square-texture.svg"),url("../public/images/background/section-bg-four.png");
+  /* Apply different properties for each background image */
+  background-repeat: repeat, no-repeat; /* First image repeats, second doesn't */
+  background-size: auto, cover; /* First image uses default size, second covers */
+  background-position: top left, center; /* Position for the first and second image */
+}
