--- a/components/heroSection/heroSection.module.scss
+++ b/components/heroSection/heroSection.module.scss
@@ -12,3 +12,9 @@
     }
 }
 
+
+// .proImg{
+//     background-image: url("../../public/images/mine/mine1.jpg");
+//     background-size: cover;
+//     background-position: center;
+// }
